fix gap hero section

--- a/style/intro.css
+++ b/style/intro.css
@@ -214,19 +214,19 @@ p {
 @media (max-width: 460px) { 
 .intro { 
         margin: 0 auto;
-        padding: 15px;
+        padding: 10px;
         text-align: center;
     }
     
     #emailForm1 {
         width: 100%;
-        gap: 15px;
+        gap: 5px;
     }
     
     .sendemail {
         width: 100%;
         max-width: 280px;
-        padding: 12px 16px;
+        padding: 10px 14px;
         font-size: 16px; /* Prevent iOS zoom */
     }
     
